cosmos/steamaudio-sys/src/bindings.rs

extern "C" {
    #[doc = " Creates an OpenCL device from an existing OpenCL device created by your application. Steam Audio will\nuse up to two command queues that you provide for enqueuing OpenCL computations.\n\n\\param  context             The context used to initialize Steam Audio.\n\\param  convolutionQueue    The \\c cl_command_queue to use for enqueueing convolution work.\n\\param  irUpdateQueue       The \\c cl_command_queue to use for enqueueing IR update work.\n\\param  device              [out] The created OpenCL device.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplOpenCLDeviceCreateFromExisting(
        context: IPLContext,
        convolutionQueue: *mut ::std::os::raw::c_void,
        irUpdateQueue: *mut ::std::os::raw::c_void,
        device: *mut IPLOpenCLDevice,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to an OpenCL device.\n\n\\param  device  The OpenCL device to retain a reference to.\n\n\\return The additional reference to the OpenCL device."]
    pub fn iplOpenCLDeviceRetain(device: IPLOpenCLDevice) -> IPLOpenCLDevice;
}
extern "C" {
    #[doc = " Releases a reference to an OpenCL device.\n\n\\param  device  The OpenCL device to release a reference to."]
    pub fn iplOpenCLDeviceRelease(device: *mut IPLOpenCLDevice);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLRadeonRaysDevice_t {
    _unused: [u8; 0],
}
#[doc = " Application-wide state for the Radeon Rays ray tracer. A Radeon Rays device must be created before using any of\nSteam Audio's Radeon Rays ray tracing functionality. In terms of the Radeon Rays API, this object encapsulates\na \\c RadeonRays::IntersectionApi object."]
pub type IPLRadeonRaysDevice = *mut _IPLRadeonRaysDevice_t;
pub type IPLRadeonRaysDeviceSettings = ::std::os::raw::c_void;
extern "C" {
    #[doc = " Creates a Radeon Rays device.\n\n\\param  openCLDevice    The OpenCL device to use for running Radeon Rays.\n\\param  settings        The settings to use when creating the Radeon Rays device.\n\\param  rrDevice        [out] The created Radeon Rays device.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplRadeonRaysDeviceCreate(
        openCLDevice: IPLOpenCLDevice,
        settings: *mut IPLRadeonRaysDeviceSettings,
        rrDevice: *mut IPLRadeonRaysDevice,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to a Radeon Rays device.\n\n\\param  device  The Radeon Rays device to retain a reference to.\n\n\\return The additional reference to the Radeon Rays device."]
    pub fn iplRadeonRaysDeviceRetain(device: IPLRadeonRaysDevice) -> IPLRadeonRaysDevice;
}
extern "C" {
    #[doc = " Releases a reference to a Radeon Rays device.\n\n\\param  device  The Radeon Rays device to release a reference to."]
    pub fn iplRadeonRaysDeviceRelease(device: *mut IPLRadeonRaysDevice);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLTrueAudioNextDevice_t {
    _unused: [u8; 0],
}
#[doc = " Application-wide state for the TrueAudio Next convolution engine. A TrueAudio Next device must be created\nbefore using any of Steam Audio's TrueAudio Next convolution functionality. In terms of the TrueAudio Next API,\nthis object encapsulates an \\c amf::TANContext and amf::TANConvolution object."]
pub type IPLTrueAudioNextDevice = *mut _IPLTrueAudioNextDevice_t;
#[doc = " Settings used to create a TrueAudio Next device."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLTrueAudioNextDeviceSettings {
    #[doc = " The number of samples in an audio frame."]
    pub frameSize: IPLint32,
    #[doc = " The number of samples in the impulse responses that will be used for convolution."]
    pub irSize: IPLint32,
    #[doc = " The Ambisonic order of the impulse responses that will be used for convolution."]
    pub order: IPLint32,
    #[doc = " The maximum number of sources that will use TrueAudio Next for convolution."]
    pub maxSources: IPLint32,
}
extern "C" {
    #[doc = " Creates a TrueAudio Next device.\n\n\\param  openCLDevice    The OpenCL device to use for running TrueAudio Next.\n\\param  settings        The settings to use when creating the TrueAudio Next device.\n\\param  tanDevice       [out] The created TrueAudio Next device.\n\n\\return Status code indicating whether or not the operation succeeded."]
    pub fn iplTrueAudioNextDeviceCreate(
        openCLDevice: IPLOpenCLDevice,
        settings: *mut IPLTrueAudioNextDeviceSettings,
        tanDevice: *mut IPLTrueAudioNextDevice,
    ) -> IPLerror;
}
extern "C" {
    #[doc = " Retains an additional reference to a TrueAudio Next device.\n\n\\param  device  The TrueAudio Next device to retain a reference to.\n\n\\return The additional reference to the TrueAudio Next device."]
    pub fn iplTrueAudioNextDeviceRetain(device: IPLTrueAudioNextDevice) -> IPLTrueAudioNextDevice;
}
extern "C" {
    #[doc = " Releases a reference to a TrueAudio Next device.\n\n\\param  device  The TrueAudio Next device to release a reference to."]
    pub fn iplTrueAudioNextDeviceRelease(device: *mut IPLTrueAudioNextDevice);
}
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLScene_t {
    _unused: [u8; 0],
}
#[doc = " A 3D scene, which can contain geometry objects that can interact with acoustic rays. The scene object itself\ndoesn't contain any geometry, but is a container for \\c IPLStaticMesh and \\c IPLInstancedMesh objects, which\ndo contain geometry."]
pub type IPLScene = *mut _IPLScene_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLStaticMesh_t {
    _unused: [u8; 0],
}
#[doc = " A triangle mesh that doesn't move or deform in any way. The unchanging portions of a scene should typically\nbe collected into a single static mesh object. In addition to the geometry, a static mesh also contains\nacoustic material information for each triangle."]
pub type IPLStaticMesh = *mut _IPLStaticMesh_t;
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct _IPLInstancedMesh_t {
    _unused: [u8; 0],
}
#[doc = " A triangle mesh that can be moved (translated), rotated, or scaled, but cannot deform. Portions of a scene\nthat undergo rigid-body motion can be represented as instanced meshes. An instanced mesh is essentially a\nscene (called the \"sub-scene\") with a transform applied to it. Adding an instanced mesh to a scene places\nthe sub-scene into the scene with the transform applied. For example, the sub-scene may be a prefab door,\nand the transform can be used to place it in a doorway and animate it as it opens or closes."]
pub type IPLInstancedMesh = *mut _IPLInstancedMesh_t;
#[doc = " Steam Audio's built-in ray tracer. Supports multi-threading. Runs on all platforms that Steam Audio\nsupports."]
pub const IPLSceneType_IPL_SCENETYPE_DEFAULT: IPLSceneType = 0;
#[doc = " The Intel Embree ray tracer. Supports multi-threading. This is a highly optimized implementation, and\nis likely to be faster than the default ray tracer. However, Embree requires Windows, Linux, or macOS,\nand a 32-bit x86 or 64-bit x86_64 CPU."]
pub const IPLSceneType_IPL_SCENETYPE_EMBREE: IPLSceneType = 1;
#[doc = " The AMD Radeon Rays ray tracer. This is an OpenCL implementation, and can use either the CPU or any\nGPU that supports OpenCL 1.2 or later. If using the GPU, it is likely to be significantly faster than\nthe default ray tracer. However, with heavy real-time simulation workloads, it may impact your\napplication's frame rate. On supported AMD GPUs, you can use the Resource Reservation feature to\nmitigate this issue."]
pub const IPLSceneType_IPL_SCENETYPE_RADEONRAYS: IPLSceneType = 2;
#[doc = " Allows you to specify callbacks to your own ray tracer. Useful if your application already uses a\nhigh-performance ray tracer. This option uses the least amount of memory at run-time, since it does\nnot have to build any ray tracing data structures of its own."]
pub const IPLSceneType_IPL_SCENETYPE_CUSTOM: IPLSceneType = 3;
#[doc = " The types of scenes that can be created. Each scene type corresponds to a different ray tracing\nimplementation."]
pub type IPLSceneType = ::std::os::raw::c_int;
#[doc = " A triangle in 3D space.\n\nTriangles are specified by their three vertices, which are in turn specified using indices into a\nvertex array.\n\nSteam Audio uses a counter-clockwise winding order. This means that when looking at the triangle such that the\nnormal is pointing towards you, the vertices are specified in counter-clockwise order.\n\nEach triangle must be specified using three vertices; triangle strip or fan representations are\nnot supported."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLTriangle {
    #[doc = " Indices of the three vertices of this triangle."]
    pub indices: [IPLint32; 3usize],
}
#[doc = " The acoustic properties of a surface.\n\nYou can specify the acoustic material properties of each triangle, although typically many triangles will\nshare a common material.\n\nThe acoustic material properties are specified for three frequency bands with center frequencies of\n400 Hz, 2.5 KHz, and 15 KHz.\n\nBelow are the acoustic material properties for a few standard materials.\n\n```cpp\n{\"generic\",{0.10f,0.20f,0.30f,0.05f,0.100f,0.050f,0.030f}}\n{\"brick\",{0.03f,0.04f,0.07f,0.05f,0.015f,0.015f,0.015f}}\n{\"concrete\",{0.05f,0.07f,0.08f,0.05f,0.015f,0.002f,0.001f}}\n{\"ceramic\",{0.01f,0.02f,0.02f,0.05f,0.060f,0.044f,0.011f}}\n{\"gravel\",{0.60f,0.70f,0.80f,0.05f,0.031f,0.012f,0.008f}},\n{\"carpet\",{0.24f,0.69f,0.73f,0.05f,0.020f,0.005f,0.003f}}\n{\"glass\",{0.06f,0.03f,0.02f,0.05f,0.060f,0.044f,0.011f}}\n{\"plaster\",{0.12f,0.06f,0.04f,0.05f,0.056f,0.056f,0.004f}}\n{\"wood\",{0.11f,0.07f,0.06f,0.05f,0.070f,0.014f,0.005f}}\n{\"metal\",{0.20f,0.07f,0.06f,0.05f,0.200f,0.025f,0.010f}}\n{\"rock\",{0.13f,0.20f,0.24f,0.05f,0.015f,0.002f,0.001f}}\n```"]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLMaterial {
    #[doc = " Fraction of sound energy absorbed at low, middle, high frequencies. Between 0.0 and 1.0."]
    pub absorption: [IPLfloat32; 3usize],
    #[doc = " Fraction of sound energy scattered in a random direction on reflection. Between 0.0 (pure specular) and 1.0\n(pure diffuse)."]
    pub scattering: IPLfloat32,
    #[doc = " Fraction of sound energy transmitted through at low, middle, high frequencies. Between 0.0 and 1.0.\nOnly used for direct occlusion calculations."]
    pub transmission: [IPLfloat32; 3usize],
}
#[doc = " A ray in 3D space."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLRay {
    #[doc = " Origin of the ray."]
    pub origin: IPLVector3,
    #[doc = " Unit vector direction of the ray."]
    pub direction: IPLVector3,
}
#[doc = " Information about a ray's intersection with 3D geometry.\n\nThis information should be provided by ray tracer callbacks when using \\c IPL_SCENETYPE_CUSTOM. Not all\nfields are required."]
#[repr(C)]
#[derive(Debug, Copy, Clone)]
pub struct IPLHit {
    #[doc = " Distance along the ray from origin to hit point. Set to \\c INFINITY if nothing was hit."]
    pub distance: IPLfloat32,
    #[doc = " (Optional) Index of the primitive hit by the ray. \\c -1 if not provided."]
    pub triangleIndex: IPLint32,
    #[doc = " (Optional) Index of the scene object hit by the ray. \\c -1 if not provided."]
    pub objectIndex: IPLint32,
    #[doc = " (Optional) Index of the material associated with the primitive hit by the ray. \\c -1 if not provided."]
    pub materialIndex: IPLint32,
    #[doc = " Unit length surface normal at the hit point. Ignored if nothing was hit."]
    pub normal: IPLVector3,
    #[doc = " Pointer to the material at the hit point. Ignored if nothing was hit."]
    pub material: *mut IPLMaterial,
}
